signup and login logic completed

--- a/app/javascript/src/login.scss
+++ b/app/javascript/src/login.scss
@@ -14,7 +14,7 @@
 	background-color: rgba(245, 245, 245, 0.65);
 }
 
-body {
+.bg-image {
 	background-image: url(https://picsum.photos/500/500);
 	height: 100%;
 	background-position: center;
